tests/lean/non_exhaustive_error.lean.expected.out
non_exhaustive_error.lean:2:4: error: non-exhaustive set of equations, the following cases are missing:
 ((1, snd))
 ((nat.succ (nat.succ a_1), nat.succ a))
non_exhaustive_error.lean:6:11: error: non-exhaustive set of equations, the following cases are missing:
 ({data := list.nil char}) (a)
 ({data := ⟨0, is_lt⟩ :: a_2}) (a)
 ({data := ⟨1, is_lt⟩ :: a_2}) (a)
 ({data := ⟨2, is_lt⟩ :: a_2}) (a)
 ({data := ⟨3, is_lt⟩ :: a_2}) (a)
 ({data := ⟨4, is_lt⟩ :: a_2}) (a)
 ({data := ⟨5, is_lt⟩ :: a_2}) (a)
 ({data := ⟨6, is_lt⟩ :: a_2}) (a)
 ({data := ⟨7, is_lt⟩ :: a_2}) (a)
 ({data := ⟨8, is_lt⟩ :: a_2}) (a)
 ({data := ⟨9, is_lt⟩ :: a_2}) (a)
 ({data := ⟨10, is_lt⟩ :: a_2}) (a)
 ({data := ⟨11, is_lt⟩ :: a_2}) (a)
 ({data := ⟨12, is_lt⟩ :: a_2}) (a)
 ({data := ⟨13, is_lt⟩ :: a_2}) (a)
 ({data := ⟨14, is_lt⟩ :: a_2}) (a)
 ({data := ⟨15, is_lt⟩ :: a_2}) (a)
 ({data := ⟨16, is_lt⟩ :: a_2}) (a)
 ({data := ⟨17, is_lt⟩ :: a_2}) (a)
 ({data := ⟨18, is_lt⟩ :: a_2}) (a)
 ({data := ⟨19, is_lt⟩ :: a_2}) (a)
 ({data := ⟨20, is_lt⟩ :: a_2}) (a)
 ({data := ⟨21, is_lt⟩ :: a_2}) (a)
 ({data := ⟨22, is_lt⟩ :: a_2}) (a)
 ({data := ⟨23, is_lt⟩ :: a_2}) (a)
 ({data := ⟨24, is_lt⟩ :: a_2}) (a)
 ({data := ⟨25, is_lt⟩ :: a_2}) (a)
 ({data := ⟨26, is_lt⟩ :: a_2}) (a)
 ({data := ⟨27, is_lt⟩ :: a_2}) (a)
 ({data := ⟨28, is_lt⟩ :: a_2}) (a)
 ({data := ⟨29, is_lt⟩ :: a_2}) (a)
 ({data := ⟨30, is_lt⟩ :: a_2}) (a)
 ({data := ⟨31, is_lt⟩ :: a_2}) (a)
 ({data := ⟨32, is_lt⟩ :: a_2}) (a)
 ({data := ⟨33, is_lt⟩ :: a_2}) (a)
 ({data := ⟨34, is_lt⟩ :: a_2}) (a)
 ({data := ⟨35, is_lt⟩ :: a_2}) (a)
 ({data := ⟨36, is_lt⟩ :: a_2}) (a)
 ({data := ⟨37, is_lt⟩ :: a_2}) (a)
 ({data := ⟨38, is_lt⟩ :: a_2}) (a)
 ({data := ⟨39, is_lt⟩ :: a_2}) (a)
 ({data := ⟨40, is_lt⟩ :: a_2}) (a)
 ({data := ⟨41, is_lt⟩ :: a_2}) (a)
 ({data := ⟨42, is_lt⟩ :: a_2}) (a)
 ({data := ⟨43, is_lt⟩ :: a_2}) (a)
 ({data := ⟨44, is_lt⟩ :: a_2}) (a)
 ({data := ⟨45, is_lt⟩ :: a_2}) (a)
 ({data := ⟨46, is_lt⟩ :: a_2}) (a)
 ({data := ⟨47, is_lt⟩ :: a_2}) (a)
 ({data := ⟨48, is_lt⟩ :: a_2}) (a)
 ({data := ⟨49, is_lt⟩ :: a_2}) (a)
 ({data := ⟨50, is_lt⟩ :: a_2}) (a)
 ({data := ⟨51, is_lt⟩ :: a_2}) (a)
 ({data := ⟨52, is_lt⟩ :: a_2}) (a)
 ({data := ⟨53, is_lt⟩ :: a_2}) (a)
 ({data := ⟨54, is_lt⟩ :: a_2}) (a)
 ({data := ⟨55, is_lt⟩ :: a_2}) (a)
 ({data := ⟨56, is_lt⟩ :: a_2}) (a)
 ({data := ⟨57, is_lt⟩ :: a_2}) (a)
 ({data := ⟨58, is_lt⟩ :: a_2}) (a)
 ({data := ⟨59, is_lt⟩ :: a_2}) (a)
 ({data := ⟨60, is_lt⟩ :: a_2}) (a)
 ({data := ⟨61, is_lt⟩ :: a_2}) (a)
 ({data := ⟨62, is_lt⟩ :: a_2}) (a)
 ({data := ⟨63, is_lt⟩ :: a_2}) (a)
 ({data := ⟨64, is_lt⟩ :: a_2}) (a)
 ({data := ⟨65, is_lt⟩ :: a_2}) (a)
 ({data := ⟨66, is_lt⟩ :: a_2}) (a)
 ({data := ⟨67, is_lt⟩ :: a_2}) (a)
 ({data := ⟨68, is_lt⟩ :: a_2}) (a)
 ({data := ⟨69, is_lt⟩ :: a_2}) (a)
 ({data := ⟨70, is_lt⟩ :: a_2}) (a)
 ({data := ⟨71, is_lt⟩ :: a_2}) (a)
 ({data := ⟨72, is_lt⟩ :: a_2}) (a)
 ({data := ⟨73, is_lt⟩ :: a_2}) (a)
 ({data := ⟨74, is_lt⟩ :: a_2}) (a)
 ({data := ⟨75, is_lt⟩ :: a_2}) (a)
 ({data := ⟨76, is_lt⟩ :: a_2}) (a)
 ({data := ⟨77, is_lt⟩ :: a_2}) (a)
 ({data := ⟨78, is_lt⟩ :: a_2}) (a)
 ({data := ⟨79, is_lt⟩ :: a_2}) (a)
 ({data := ⟨80, is_lt⟩ :: a_2}) (a)
 ({data := ⟨81, is_lt⟩ :: a_2}) (a)
 ({data := ⟨82, is_lt⟩ :: a_2}) (a)
 ({data := ⟨83, is_lt⟩ :: a_2}) (a)
 ({data := ⟨84, is_lt⟩ :: a_2}) (a)
 ({data := ⟨85, is_lt⟩ :: a_2}) (a)
 ({data := ⟨86, is_lt⟩ :: a_2}) (a)
 ({data := ⟨87, is_lt⟩ :: a_2}) (a)
 ({data := ⟨88, is_lt⟩ :: a_2}) (a)
 ({data := ⟨89, is_lt⟩ :: a_2}) (a)
 ({data := ⟨90, is_lt⟩ :: a_2}) (a)
 ({data := ⟨91, is_lt⟩ :: a_2}) (a)
 ({data := ⟨92, is_lt⟩ :: a_2}) (a)
 ({data := ⟨93, is_lt⟩ :: a_2}) (a)
 ({data := ⟨94, is_lt⟩ :: a_2}) (a)
 ({data := ⟨95, is_lt⟩ :: a_2}) (a)
 ({data := ⟨96, is_lt⟩ :: a_2}) (a)
 ({data := ⟨97, is_lt⟩ :: a_2}) (a)
 ({data := ⟨98, is_lt⟩ :: a_2}) (a)
 ({data := ⟨99, is_lt⟩ :: a_2}) (a)
